tests/instantiating/invalid/negative_width_value/bus.fbd
main bus
	foo status
		width = -1
